--- a/SpotifyWPW/WebPlayer/Style/Components/_TrackList.scss
+++ b/SpotifyWPW/WebPlayer/Style/Components/_TrackList.scss
@@ -199,8 +199,3 @@
 		}
 	}
 }
-
-// Copyrights (raise them above the controls)
-.copyrights {
-    padding-bottom: 70px;
-}
